Fixes to chart alignment on designer view

--- a/src/main/javascript/app/modules/analyze/components/analyze-chart/analyze-chart.component.scss
+++ b/src/main/javascript/app/modules/analyze/components/analyze-chart/analyze-chart.component.scss
@@ -8,6 +8,14 @@ analyze-chart {
     background: whitesmoke;
   }
 
+  chart {
+    width: calc(100% - 48px);
+    margin: 0 auto;
+    background: white;
+    border-radius: 2px;
+    box-shadow: 0 2px 6px 0 rgba(20, 39, 54, 0.17);
+  }
+
   md-checkbox {
     width: 100%;
   }
